--- a/dailynews.html
+++ b/dailynews.html
@@ -221,11 +221,7 @@
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
         [(main_title, callback) => process_morningbrew(main_title, callback), "Morning Brew"],
-        [(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/MOBI8777994188", main_title, callback), "[MBP] Business Casual"],
-        [(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/MOBI4141652289", main_title, callback), "[MBP] Founder's Journal"],
-        [(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/imposters-mb", main_title, callback), "[MBP] Imposters"],
         [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "The Overflow"],
-        [(main_title, callback) => process_stackoverflow_podcast("https://stackoverflow.blog/podcast/feed/", main_title, callback), "Stack Overflow Podcast"],
         [(main_title, callback) => process_manhhomienbienthuy("https://manhhomienbienthuy.github.io/feeds/rss.xml", main_title, callback), "Blog manhhomienbienthuy"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
@@ -235,9 +231,13 @@
         //[(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
         //["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
         //["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
+        //[(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/imposters-mb", main_title, callback), "[MBP] Imposters"],
         //[(main_title, callback) => process_sputniknews("https://vn.sputniknews.com/services/widget/lenta/", main_title, callback), "Sputnik News VN"],
         //[(main_title, callback) => process_spiderum("https://spiderum.com/api/v1/feed/getAllPosts?type=new&page=1", main_title, callback), "Spiderum"],
         //[(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
+        //[(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/MOBI8777994188", main_title, callback), "[MBP] Business Casual"],
+        //[(main_title, callback) => process_morningbrew_podcast("https://feeds.megaphone.fm/MOBI4141652289", main_title, callback), "[MBP] Founder's Journal"],
+        //[(main_title, callback) => process_stackoverflow_podcast("https://stackoverflow.blog/podcast/feed/", main_title, callback), "The Stack Overflow Podcast"],
         //[(main_title, callback) => process_reddit_subfunc("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng", main_title, callback), "Reddit"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTENCQVNNd29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlQQ0FRYUN3b0pMMjB2TURGamNtUTFLZzRLREJJS1Ztbmh1NGQwSUU1aGJTZ0EqKggAKiYICiIgQ0JBU0Vnb0lMMjB2TURWcWFHY1NBblpwR2dKV1RpZ0FQAVAB?hl=vi&gl=VN&ceid=VN%3Avi", "VN"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTkNCQVNOQW9JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURsdWJWOHFFQW9PRWd4VWFPRzZ2eUJuYWVHN20ya29BQSoqCAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVABUAE?hl=vi&gl=VN&ceid=VN%3Avi", "TG"],
