--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 50",
+        app_title = "Dailynews",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -572,7 +572,7 @@
                 callback();
             });
     }
-    function process_stackoverflow(url, main_title, callback) {
+    function process_stackoverflow(main_title, callback) {
         fetch("https://api.allorigins.win/get?url=https://stackoverflow.blog/newsletter/feed/")
             .then(res => res.json())
             .then(json => {
