--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 57",
+        app_title = "Dailynews 58",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -275,7 +275,7 @@
                 document.body.appendChild(alert_box);
                 if (!is_active)
                     alert("Đã tải xong tất cả!");
-                document.head.innerHTML = "";
+                //document.head.innerHTML = "";
             }
         });
     }
