--- a/dailynews.html
+++ b/dailynews.html
@@ -30,6 +30,7 @@
         ], main_title, callback), "Trích dẫn hay"],
         [process_wikipedia, "Wikipedia"],
         [process_ytb, "YouTube"],
+        [(main_title, callback) => process_morningbrew(main_title, callback), "Morning Brew"],
         [process_stackoverflow, "The Overflow"],
         [process_manhhomienbienthuy, "Blog manhhomienbienthuy"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
@@ -37,7 +38,6 @@
         ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Tin tức chung"]
 
         //[(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
-        //[(main_title, callback) => process_morningbrew(main_title, callback), "Morning Brew"],
         //[(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
         //["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
         //["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
