--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 61",
+        app_title = "Dailynews 62",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -345,7 +345,7 @@
                 //let flag = false;
                 //flag = check_title_post(article, main_title, flag);
                 if (article && whitelist_morningbrew[issue] != article.title) {
-                    document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><img src='" + article.image + "'/><h3>" + article.title + "</h3><i>" + article.pubdate_text + "</i></div></div></div>")
+                    document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><img src='" + article.image + "'/><h3>" + article.title + "</h3><i>" + main_title.replace("☕ ", "") + " - " + format_subtitle_date(article.pubdate_text) + "</i></div></div></div>")
                 }
                 articles.push(article);
                 if (article)
