--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 62",
+        app_title = "Dailynews 63",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -345,18 +345,16 @@
                 //let flag = false;
                 //flag = check_title_post(article, main_title, flag);
                 if (article && whitelist_morningbrew[issue] != article.title) {
-                    document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><img src='" + article.image + "'/><h3>" + article.title + "</h3><i>" + main_title.replace("☕ ", "") + " - " + format_subtitle_date(article.pubdate_text) + "</i></div></div></div>")
+                    document.body.innerHTML += ("<div class='article'><div onclick='window.open(\"" + article.link + "\");'><div><img src='" + article.image + "'/><h3>" + article.title.replace("☕ ", "") + "</h3><i>" + main_title + " - " + format_subtitle_date(article.pubdate_text) + "</i></div></div></div>")
                 }
                 articles.push(article);
                 if (article)
                     whitelist_morningbrew[issue] = article.title;
                 if (articles.length == issues_alias.length) {
-                    if (article)
-                        articles = articles.sortBy(o => o.pubDate);
                     loaded_datas[main_title] = (articles);
                     document.body.innerHTML += ""; // "<i>Đã tải xong!</i>";
-                    if (article)
-                        set_whitelist(JSON.parse(JSON.stringify(articles)).pop(), main_title, whitelist_morningbrew);
+                    //if (article)
+                    set_whitelist(JSON.parse(JSON.stringify(articles)).pop(), main_title, whitelist_morningbrew);
                     callback();
                 }
             });
