--- a/dailynews.html
+++ b/dailynews.html
@@ -27,7 +27,8 @@
             ["Một người lãnh đạo giỏi thì không được phép [mất kiểm soát] hay [than vãn]", "Nguyễn Hải Phong (tui nè ^^)"],
             ["Những [bước nhỏ nhất] mà bạn có thể [thực hiện ngay hôm nay] để có thể giúp bạn tiến gần hơn tới [mục tiêu lớn nhất] là gì?", "CafeBiz"],
             ["Bạn sẽ trở nên nguy hiểm nếu như học được cách [kiểm soát cảm xúc của mình]. Và khi đó, chẳng kẻ nào có thể [hiểu và nắm bắt được con người bạn]!", "Dale Carnegie"],
-            ["Successful people become great leaders when they learn to shift the focus from [themselves] to [others]", "Marshall Goldsmith"]
+            ["Successful people become great leaders when they learn to shift the focus from [themselves] to [others]", "Marshall Goldsmith"],
+            ["A man with [a watch] knows what time it is. A man with [two watches] is [never sure]", "Định luật Segal"]
         ], main_title, callback), "Trích dẫn hay"],
         [process_wikipedia, "Wikipedia"],
         [process_ytb, "YouTube"],
