--- a/dailynews.html
+++ b/dailynews.html
@@ -26,7 +26,8 @@
             ["Những [bước nhỏ nhất] mà bạn có thể [thực hiện ngay hôm nay] để có thể giúp bạn tiến gần hơn tới [mục tiêu lớn nhất] là gì?", "CafeBiz"],
             ["Bạn sẽ trở nên nguy hiểm nếu như học được cách [kiểm soát cảm xúc của mình]. Và khi đó, chẳng kẻ nào có thể [hiểu và nắm bắt được con người bạn]!", "Dale Carnegie"],
             ["Successful people become great leaders when they learn to shift the focus from [themselves] to [others]", "Marshall Goldsmith"],
-            ["A man with [a watch] knows what time it is. A man with [two watches] is [never sure]", "Định luật Segal"]
+            ["A man with [a watch] knows what time it is. A man with [two watches] is [never sure]", "Định luật Segal"],
+            ["[Sắp xếp ưu tiên] và tiến tới những mục tiêu [quan trọng nhất], thay vì liên tục phản ứng với những [điều cấp bách]", "7 thói quen thành đạt"]
         ],
         link_list = [
             [process_quote, "Trích dẫn hay"],
